# Dynamic-Object-Detection

./: .gitignore  CMakeLists.txt  README.md
labels/: bird.txt  car.txt  double_squirrel.txt  frog.txt  sheep.txt  single_squirrel.txt
output/: bird_prediction.txt  car_prediction.txt  frog_prediction.txt  sheep_prediction.txt  squirrel_prediction.txt
src/: Yusuf_Celikkiran.cpp
